2004-09-15  Derek Price  <derek@ximbiot.com>

	* sanity.sh (writeproxy, writeproxy-noredirect): Find $RSYNC in a
	portable manner.

2004-09-15  Mark D. Baushke  <mdb@cvshome.org>

	* sanity.sh: Find $RSYNC in a portable manner.

2004-09-15  Derek Price  <derek@ximbiot.com>

	* parseinfo.c (parse_config): Complete parsing of the remainder of the
	config file when errors are encountered.  Accept and ignore
	UseNewInfoFmtStrings=yes when !SUPPORT_OLD_INFO_FMT_STRINGS.

2004-09-15  Derek Price  <derek@ximbiot.com>

	* buffer.c (buf_copy_data): Pass args to buf_append_data correctly.

2004-09-15  Derek Price  <derek@ximbiot.com>

	* sanity.sh: Set $RSYNC in proxy mode.

2004-09-15  Derek Price  <derek@ximbiot.com>

	* main.c: Fix typo in comment.

2004-09-15  Derek Price  <derek@ximbiot.com>

	* rcs.c: s/abort/assert/.  Reformat function headers.  Remove
	unnecessary typecasts & prototypes.

2004-09-14  Mark D. Baushke  <mdb@cvshome.org>

	* parseinfo.c (readBool): Remove dead code.

	* filesubr.c (cvs_casecmp): Move to...
	* subr.c (cvs_casecmp): ...here.
	* cvs.h (cvs_casecmp): No longer ifdef under SERVER_SUPPORT

	* parseinfo.c (readBool): Return false when there was no boolean
	found.

2004-09-14  Derek Price  <derek@ximbiot.com>

	* cvs.h (top_level_admin, ImportNewFilesToVendorBranchOnly):
	s/int/bool/.
	(MaxCommentLeaderLength, UseArchiveCommentLeader): New vars.
	* main.c: Ditto, for all four vars above.
	* mkmodules.c (config_contents): Add default info for
	MaxCommentLeaderLength & UseArchiveCommentLeader.
	* parseinfo.c (readBool, readSizeT): New functions.
	(parse_info): Use new functions.  Parse MaxCommentLeaderLength &
	UseArchiveCommentLeader.
	* rcs.c (expand_keywords): Limit the size of the comment leader to
	MaxCommentLeaderLength & fall back to the comment leader specified in
	the RCS archive when requested.
	(preserve_perms): s/int/bool/.
	* rcs.h (preserve_perms), server.c (system_auth), server.h
	(system_auth): Likewise.